--- a/Homework7.ipynb
+++ b/Homework7.ipynb
@@ -201,7 +201,7 @@
     "element_to_delete = default_list[-1]\n",
     "default_list.remove(element_to_delete)\n",
     "\n",
-    "_**1 return default_list[DEFAULT_USER_COUNT-2]**_\n",
+    "**1 return default_list[DEFAULT_USER_COUNT-2]**\n",
     "\n",
     "При однократном вызове этой функции все работает корректно:\n",
     "delete_and_return_last_user(1)\n",
